--- a/examples/package.json
+++ b/examples/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@proton/vert": "^0.3.2",
+    "@types/node": "^18.0.0",
     "chai": "^4.3.6",
     "mocha": "^9.2.2",
     "npm-run-all": "^4.1.5",
