--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proton-tsc",
-  "version": "0.3.14",
+  "version": "0.3.15",
   "license": "MIT",
   "types": "./index.d.ts",
   "main": "./assembly/index.ts",
@@ -28,7 +28,7 @@
     "prepublish": "npx npm-dts generate --entry ./assembly/index.ts --force && npx replace-in-file --configFile=./replace.config.js"
   },
   "dependencies": {
-    "proton-asc": "^0.2.103"
+    "proton-asc": "^0.2.104"
   },
   "engines": {
     "npm": ">=7.0.0",
@@ -49,6 +49,7 @@
     "cross-fetch": "^3.1.5",
     "crypto": "^1.0.1",
     "mocha": "^9.2.2",
+    "npm-dts": "^1.3.12",
     "npm-run-all": "^4.1.5",
     "replace-in-file": "^6.3.2",
     "source-map-support": "^0.5.21",
