--- a/examples/package.json
+++ b/examples/package.json
@@ -17,7 +17,7 @@
     "test": "run-p test:*"
   },
   "dependencies": {
-    "proton-tsc": "0.3.14"
+    "proton-tsc": "^0.3.15"
   },
   "devDependencies": {
     "@proton/vert": "^0.3.2",
