:art: move pixel runner to examples'

--- a/examples/package.json
+++ b/examples/package.json
@@ -6,6 +6,7 @@
     "build:rng": "npx proton-asc ./rng/rng.contract.ts",
     "build:txid": "npx proton-asc ./txid/txid.contract.ts",
     "build:oracles": "npx proton-asc ./oracles/oracles.contract.ts",
+    "build:pixel": "npx proton-asc ./pixel/pixel.contract.ts",
     "build": "run-p build:*",
     "test:kv": "mocha -s 250 ./kv/*.spec.ts -r ts-node/register",
     "test:rng": "mocha -s 250 ./rng/*.spec.ts -r ts-node/register",
