--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prepublish": "npx npm-dts generate --entry ./assembly/index.ts --force && npx replace-in-file --configFile=./replace.config.js"
   },
   "dependencies": {
+    "brotli": "^1.3.3",
     "proton-asc": "^0.2.104"
   },
   "engines": {
@@ -40,7 +41,7 @@
     "@greymass/abi2core": "^1.1.0",
     "@greymass/eosio": "^0.5.5",
     "@proton/js": "^26.1.2",
-    "@proton/vert": "^0.3.2",
+    "@proton/vert": "^0.3.7",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^17.0.22",
