--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proton-tsc",
-  "version": "0.3.23",
+  "version": "0.3.24",
   "license": "MIT",
   "types": "./index.d.ts",
   "main": "./assembly/index.ts",
@@ -25,11 +25,10 @@
     "testexamples": "npm run --prefix examples test",
     "core:escrow": "cat ./assembly/escrow/target/escrow.contract.abi | abi2core > ./assembly/escrow/target/escrow.client-types.ts",
     "run:playground": "cross-env LOG_LEVEL=debug ts-node ./playground.ts",
-    "prepublish": "npx npm-dts generate --entry ./assembly/index.ts --force && npx replace-in-file --configFile=./replace.config.js"
+    "prepublish": "npm run build && npm run test && npx npm-dts generate --entry ./assembly/index.ts --force && npx replace-in-file --configFile=./replace.config.js"
   },
   "dependencies": {
-    "brotli": "^1.3.3",
-    "proton-asc": "^0.2.104"
+    "proton-asc": "^0.2.106"
   },
   "engines": {
     "npm": ">=7.0.0",
