--- a/examples/package.json
+++ b/examples/package.json
@@ -8,6 +8,8 @@
     "build:oracles": "npx proton-asc ./oracles/oracles.contract.ts",
     "build:pixel": "npx proton-asc ./pixel/pixel.contract.ts",
     "build:crypto": "npx proton-asc ./crypto/crypto.contract.ts",
+    "build:auth": "npx proton-asc ./auth/auth.contract.ts",
+    "build:time": "npx proton-asc ./time/time.contract.ts",
     "build": "run-p build:*",
     "test:kv": "mocha -s 250 ./kv/*.spec.ts -r ts-node/register",
     "test:rng": "mocha -s 250 ./rng/*.spec.ts -r ts-node/register",
@@ -16,13 +18,15 @@
     "test:createnft": "mocha -s 250 ./createnft/*.spec.ts -r ts-node/register",
     "test:oracles": "mocha -s 250 ./oracles/*.spec.ts -r ts-node/register",
     "test:crypto": "mocha -s 250 ./crypto/*.spec.ts -r ts-node/register",
+    "test:auth": "mocha -s 250 ./auth/*.spec.ts -r ts-node/register",
+    "test:time": "mocha -s 250 ./time/*.spec.ts -r ts-node/register",
     "test": "run-p test:*"
   },
   "dependencies": {
-    "proton-tsc": "^0.3.39"
+    "proton-tsc": "^0.3.41"
   },
   "devDependencies": {
-    "@proton/vert": "^0.3.13",
+    "@proton/vert": "^0.3.15",
     "@types/node": "^18.0.0",
     "chai": "^4.3.6",
     "mocha": "^9.2.2",
